<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/progressView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/progress_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/refillDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/titleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/space_12dp"
            android:paddingHorizontal="@dimen/refill_et_padding_vertical"
            android:paddingVertical="@dimen/space_12dp"
            android:text="Refill"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_gas_station" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/refillDateContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_start_end_padding"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:paddingVertical="@dimen/refill_et_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refillDialogTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/refillDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/date_text"
            android:inputType="date"
            android:text="@string/date_example_text"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentMileageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_start_end_padding"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:paddingVertical="@dimen/refill_et_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refillDateContainer"
        app:placeholderText="YOUR CAR MILEAGE"
        app:placeholderTextColor="@color/pistachio"
        app:suffixText="@string/mileage_units">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentMileageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_mileage_text"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/refillAmountContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_start_end_padding"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:paddingVertical="@dimen/refill_et_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentMileageContainer"
        app:placeholderText="HOW MANY LITTERS"
        app:placeholderTextColor="@color/pistachio"
        app:suffixText="@string/capacity_units">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/refillAmountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/refilled_fuel_text"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceOfFuelContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_start_end_padding"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:paddingVertical="@dimen/refill_et_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refillAmountContainer"
        app:placeholderText="PRICE PER LITTER"
        app:placeholderTextColor="@color/pistachio"
        app:suffixText="@string/price_units"
        app:suffixTextAppearance="@dimen/text_size_normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceOfFuelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_of_fuel_text"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/refillNotesContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_start_end_padding"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:paddingVertical="@dimen/refill_et_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceOfFuelContainer"
        app:placeholderText="WRITE YOUR NOTES HERE"
        app:placeholderTextColor="@color/pistachio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/refillNotesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="NOTES"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/fullRefillCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/green_dark"
        android:checked="true"
        android:text="REFILL TO FULL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refillNotesContainer" />

    <LinearLayout
        android:id="@+id/saveRefillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginEnd="@dimen/settings_start_end_padding"
        android:background="@drawable/common_button_selectable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullRefillCheckBox">

        <TextView
            android:id="@+id/createUserButtonText"
            style="@style/commonConfirmButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:text="@string/save_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/saveRefillButton"
        app:layout_constraintEnd_toStartOf="@id/saveRefillButton"
        app:layout_constraintTop_toTopOf="@id/saveRefillButton">

        <TextView
            android:id="@+id/cancelButtonText"
            style="@style/commonCancelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/action_cancel" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>