<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="createAccountDialog">

    <RelativeLayout
        android:id="@+id/progressView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/progress_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/emailAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/contact_emailAddress_title"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/emailEditText"
        style="@style/emailInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailAddressTitle"
        app:layout_constraintTop_toBottomOf="@id/emailAddressTitle" />

    <TextView
        android:id="@+id/userNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/contact_name_title"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@id/emailAddressTitle"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/emailInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:hint="@string/contact_name_example_title"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailAddressTitle"
        app:layout_constraintTop_toBottomOf="@id/userNameTitle" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/contact_password_title"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@id/emailAddressTitle"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/passwordInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailAddressTitle"
        app:layout_constraintTop_toBottomOf="@id/passwordTitle" />

    <ImageView
        android:id="@+id/passwordVisibilityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:padding="10dp"
        android:src="@drawable/ic_password_visibility"
        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toTopOf="@id/passwordEditText" />

    <LinearLayout
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/common_button_selectable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText">

        <TextView
            android:id="@+id/createUserButtonText"
            style="@style/commonConfirmButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/action_create" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/createUserButton"
        app:layout_constraintEnd_toStartOf="@id/createUserButton"
        app:layout_constraintTop_toTopOf="@id/createUserButton">

        <TextView
            android:id="@+id/cancelButtonText"
            style="@style/commonCancelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/action_cancel" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cancelButton" />


</androidx.constraintlayout.widget.ConstraintLayout>