<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_history_background_selectable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/historyBarImageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/item_history_bar_background_selectable"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="50dp"
            android:src="@drawable/ic_gas_station"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/historyDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/date_null_text"
            android:padding="3dp"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toStartOf="@id/historyDividerLeft"
            app:layout_constraintStart_toEndOf="@id/historyBarImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyAvrUsageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/data_null_big_text"
            android:paddingHorizontal="18dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toStartOf="@id/historyDividerLeft"
            app:layout_constraintStart_toEndOf="@id/historyBarImageView"
            app:layout_constraintTop_toBottomOf="@id/historyDateTitle" />

        <TextView
            android:id="@+id/historyAvrUsageDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usage_units"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintEnd_toEndOf="@id/historyAvrUsageTitle"
            app:layout_constraintEnd_toStartOf="@id/historyDividerLeft"
            app:layout_constraintTop_toBottomOf="@id/historyAvrUsageTitle" />

        <View
            android:id="@+id/historyDividerLeft"
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@color/black"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/historyAvrUsageDesc"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyMileageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="@dimen/drawable_start_text_padding"
            android:gravity="bottom"
            android:hint="@string/data_null_small_text"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/text_size_small"
            app:drawableStartCompat="@drawable/ic_mileage_image"
            app:layout_constraintStart_toEndOf="@id/historyDividerLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyMileageDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/mileage_units"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintBottom_toBottomOf="@id/historyMileageTitle"
            app:layout_constraintStart_toEndOf="@id/historyMileageTitle" />

        <TextView
            android:id="@+id/historyAddedMileageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/data_null_small_text"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="2dp"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toStartOf="@id/historyAddedMileageDesc"
            app:layout_constraintStart_toEndOf="@id/historyDividerLeft"
            app:layout_constraintTop_toBottomOf="@id/historyMileageTitle" />

        <TextView
            android:id="@+id/historyAddedMileageDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/mileage_units"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintBottom_toBottomOf="@id/historyAddedMileageTitle"
            app:layout_constraintEnd_toStartOf="@id/historyDividerRight" />

        <View
            android:id="@+id/historyDividerRight"
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteHistoryButton"
            app:layout_constraintStart_toEndOf="@id/historyDividerLeft"
            app:layout_constraintTop_toTopOf="@id/historyMileageTitle" />

        <TextView
            android:id="@+id/historyExpenseTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/data_null_small_text"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="2dp"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toStartOf="@id/historyExpenseDesc"
            app:layout_constraintStart_toEndOf="@id/historyDividerRight"
            app:layout_constraintTop_toBottomOf="@id/historyMileageTitle" />

        <TextView
            android:id="@+id/historyExpenseDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/price_units"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintBottom_toBottomOf="@id/historyExpenseTitle"
            app:layout_constraintEnd_toStartOf="@id/deleteHistoryButton" />

        <ImageView
            android:id="@+id/deleteHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingHorizontal="7dp"
            android:paddingVertical="25dp"
            android:src="@drawable/item_history_delete_selectable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/historyLittersText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/data_null_small_text"
            android:paddingStart="15dp"
            android:paddingTop="3dp"
            android:paddingEnd="2dp"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintBottom_toTopOf="@id/historyExpenseTitle"
            app:layout_constraintEnd_toEndOf="@id/historyExpenseTitle"
            app:layout_constraintStart_toStartOf="@id/historyExpenseTitle"
            tools:text="@string/data_null_small_text" />

        <TextView
            android:id="@+id/historyLittersUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/capacity_units"
            android:textSize="@dimen/text_size_item_desc"
            app:layout_constraintBottom_toBottomOf="@id/historyLittersText"
            app:layout_constraintEnd_toStartOf="@id/deleteHistoryButton"
            app:layout_constraintStart_toEndOf="@id/historyLittersText" />

        <TextView
            android:id="@+id/historyItemIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="3sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="item ID" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>